\Add aggressive cache-busting to HTML template\n\n- Add Cache-Control, Pragma, and Expires headers to prevent caching\n- Update title to 'MOMsters - Survival Arena'\n- Add unique cache-bust comment to force HTML refresh\n- Add timestamped cache-bust meta tag\n- This should resolve persistent GitHub Pages caching issues"

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
+<!-- Cache-bust: 1751249900-FORCE-REFRESH -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vampire Survivors Clone</title>
+    <title>MOMsters - Survival Arena</title>
+    <!-- Cache-busting headers -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta name="cache-bust" content="1751249900000">
     <style>
         body {
             margin: 0;
